Refactored token generation Added cache Refactored yaml properties Added new logger